cmake_minimum_required(VERSION 3.26)
project(c__)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__ main.cpp
        Entite.h
        Entite.cpp
        Arme.cpp
        Arme.h
        Armure.h
        Armure.cpp
        Monstre.h
        Monstre.cpp
        Guerrier.h
        Rodeur.h
        Mage.h
        Guerrier.cpp
        Mage.cpp
        Rodeur.cpp)
